# navigation-

./: README.md
install/: local_setup.sh  setup.sh
install/auto_explo/lib/auto_explo/: wfd_node
install/auto_explo/share/auto_explo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/auto_explo/share/auto_explo/cmake/: auto_exploConfig-version.cmake  auto_exploConfig.cmake
install/auto_explo/share/auto_explo/config/: explore.yaml  my_map_slam.pgm  my_map_slam.pgm:Zone.Identifier  my_map_slam.yaml  my_map_slam.yaml:Zone.Identifier  nav2_param.yaml  nav2_params.yaml  navigation.rviz  slam.yaml
install/auto_explo/share/auto_explo/environment/: ament_prefix_path.dsv  path.dsv
install/auto_explo/share/auto_explo/explore/: CHANGELOG.rst  CHANGELOG.rst:Zone.Identifier  CMakeLists.txt  CMakeLists.txt:Zone.Identifier  package.xml  package.xml:Zone.Identifier
install/auto_explo/share/auto_explo/launch/: explore.launch.py  explore_final.launch.py  naviagtion_launch.py  navigation.launch.py  online_async_launch.launch.py  slam.launch.py
install/auto_explo/share/auto_explo/rviz/: explore.rviz
install/explore_lite/share/explore_lite/: local_setup.sh  package.sh
install/nav2_custom_planner/include/nav2_custom_planner/: custom_planner.hpp
install/nav2_custom_planner/share/nav2_custom_planner/: gobal_planner_plugin.xml  local_setup.sh  package.sh  package.xml
log/: latest_build
src/auto_explo/: CMakeLists.txt  package.xml
src/auto_explo/config/: my_map_slam.pgm  my_map_slam.yaml  nav2_param.yaml  navigation.rviz
src/auto_explo/launch/: navigation.launch.py  slam.launch.py
src/nav2_custom_planner/: CMakeLists.txt
src/nav2_custom_planner/src/: custom_planner.cpp
(+33 files in other folders)
